column_list: add support for generator
The implementation is included in the previous commit
59dee73b7a599be3b36b7762db6140b8c375b94d accidentally. Sorry.

This adds test and documents for it.

--- a/doc/locale/ja/LC_MESSAGES/reference/commands/column_create.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/commands/column_create.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.2.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2024-10-19 18:13+0900\n"
+"PO-Revision-Date: 2024-10-20 07:03+0900\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -616,7 +616,7 @@ msgid "Create a generated column"
 msgstr "自動生成カラムを作成"
 
 msgid "You can generate a column value from other column value automatically. You can use an expression in :doc:`../grn_expr/script_syntax` how to generate a column value."
-msgstr "他のカラムの値からカラムの値を自動で生成することができます。どのようにカラムの値を生成するかは :doc:`../grn_expr/script_syntax` 形式の式で指定できます。"
+msgstr "他のカラムの値からカラムの値を自動で生成することができます。どのようにカラムの値を生成するかは :doc:`../grn_expr/script_syntax` の式で指定できます。"
 
 msgid "Here is an example how to define a generated column:"
 msgstr "以下は自動生成カラムの定義例です。"
@@ -1096,7 +1096,7 @@ msgid "``generator``"
 msgstr ""
 
 msgid "Specifies a generator expression in :doc:`../grn_expr/script_syntax` that is used to generate column value automatically."
-msgstr ":doc:`../grn_expr/script_syntax` 形式の生成式を指定します。この式はカラムの値を自動で生成するために使われます。"
+msgstr ":doc:`../grn_expr/script_syntax` の生成式を指定します。この式はカラムの値を自動で生成するために使われます。"
 
 msgid "This option is useful if you want to generate a column value from other column value automatically."
 msgstr "他のカラムの値からカラムの値を自動で生成したい場合にこのオプションは有用です。"
