--- a/doc/locale/ja/LC_MESSAGES/reference/commands/schema.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/commands/schema.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.2.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2022-02-09 09:45+0900\n"
+"PO-Revision-Date: 2024-10-21 11:14+0900\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -507,8 +507,17 @@ msgstr "インデックスカラムのソースカラム。"
 msgid "This is an array of :ref:`schema-return-value-source`."
 msgstr ":ref:`schema-return-value-source` の配列になります。"
 
-msgid "Normally, if the column isn't an index column, this is an empty array."
-msgstr "通常、カラムがインデックスカラムでない場合は空配列になります。"
+msgid "If the column is an index column or a :ref:`generated column<column-create-generated-column>`, this has one or more elements. Otherwise, this is an empty array."
+msgstr "インデックスカラムまたは :ref:`自動生成カラム<column-create-generated-column>` の場合は1つ以上の要素になります。そうでない場合は空の配列になります。"
+
+msgid "``generator``"
+msgstr ""
+
+msgid "The generator expression in :doc:`../grn_expr/script_syntax`."
+msgstr ":doc:`../grn_expr/script_syntax` の生成式です。"
+
+msgid "If the column is not a :ref:`generated column<column-create-generated-column>`, this is an empty string."
+msgstr ":ref:`自動生成カラム<column-create-generated-column>` でない場合は空文字列になります。"
 
 msgid "The indexes of the column."
 msgstr "カラムのインデックス。"
