doc reference object_inspect: fix a typo

--- a/doc/locale/ja/LC_MESSAGES/reference/commands/object_inspect.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/commands/object_inspect.po
@@ -543,7 +543,7 @@ msgstr ""
 msgid "The generator expression in :doc:`../grn_expr/script_syntax`."
 msgstr ":doc:`../grn_expr/script_syntax` の生成式です。"
 
-msgid ":ref:`column-create-generate`"
+msgid ":ref:`column-create-generator`"
 msgstr ""
 
 msgid "``GENERATED_COLUMN_SOURCE_ID``"
