--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_index_cursor.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_index_cursor.po
@@ -15,9 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_index_cursor``"
 msgstr ""
 
@@ -33,23 +30,5 @@ msgstr "例"
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid ":c:type:`grn_table_cursor` から取得できるそれぞれのレコードについて、 ``GRN_OBJ_COLUMN_INDEX`` 型のカラムの値を順番に取り出すためのカーソルを生成して返します。"
-msgstr ""
-
-msgid "rid_min, rid_maxを指定して取得するレコードidの値を制限することができます。"
-msgstr ""
-
-msgid "戻り値であるgrn_index_cursorは :c:func:`grn_obj_close()` を使って解放します。"
-msgstr ""
-
-msgid "対象cursorを指定します。"
-msgstr ""
-
-msgid "対象インデックスカラムを指定します。"
-msgstr ""
-
-msgid "出力するレコードidの下限を指定します。"
-msgstr ""
-
-msgid "出力するレコードidの上限を指定します。"
-msgstr ""
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
