doc news: add 14.1.0 entry

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,6 +1,32 @@
 # News - 14 series
 
 <!-- prettier-ignore-start -->
+=======
+(release-14-1-0)=
+## Release 14.1.0 - 2024-10-29
+<!-- prettier-ignore-end -->
+
+### Improvements
+
+* [status] `status`の結果に`llama.cpp`を追加しました。
+
+* 新しい関数 `language_model_vectorize()` を追加しました。(実験的)
+
+* [column_create] 新しい引数 `--generator` を追加しました。
+
+  カラムを自動生成できます。
+  以下のように他のカラムの値からカラムの値を自動で生成できます。
+  この機能のメリットは以下の2点です。
+
+  1. わざわざユーザーがテキスト生成処理を管理する必要がありません。
+  2. 生成元のカラムさえあれば良いので、`load`するデータ量を減らすことができます。
+
+### Fixes
+
+* [{doc}`/server/gqtp`] GQPTクライアントに返却する`INVALID_ARGUMENT`の`RC`の値が`-22
+`ではなく、`65514`になっていた問題を修正しました。
+
+<!-- prettier-ignore-start -->
 (release-14-0-9)=
 ## Release 14.0.9 - 2024-09-27
 <!-- prettier-ignore-end -->
